# vote-server

./: .gitignore  Cargo.toml  README.md  election.tpl
.github/workflows/: build.yaml
src/: db.rs  election.json  election2.json  election3.json  elections.rs  lib.rs  main.rs  validate.rs
