[package]
name = "vote-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }
clap = { version = "4.5.16", features = ["derive"] }
clap-repl = "0.3.0"
console = "0.15.8"
rocket = "0.5.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
r2d2_sqlite = "0.22"
r2d2 = "0.8"
zcash-vote = {git = "https://github.com/hhanh00/zcash-vote.git", rev="c2aacb3"}
flatbuffers = "24.3.7"
serde_json = "1.0.115"
hex = "0.4"
rocket_cors = "0.6.0"
orchard = "0.3.0"

[patch.crates-io]
orchard = {git = "https://github.com/hhanh00/orchard.git", rev="2186856"}
halo2_gadgets  = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
